@@ -40,7 +40,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.6</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
+          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <!-- 4. 配置执行插件（命令行运行 main 时用） -->
@@ -62,73 +62,24 @@
     </plugins>
   </build>
   <artifactId>peanut-portal-all</artifactId>
-  <version>3.0.0-20251013-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-
-    <module>peanut-sdk</module>
-    <module>peanut-base</module>
-    <module>peanut-aps</module>
-    <module>peanut-gateway</module>
-    <module>peanut-flow</module>
-    <module>peanut-task</module>
-    <module>peanut-java-model</module>
-    <module>peanut-store</module>
-    <module>peanut-algorithm</module>
-  </modules>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>com.olivia</groupId>
-        <artifactId>peanut-base</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.olivia</groupId>
-        <artifactId>peanut-aps</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.olivia</groupId>
         <artifactId>peanut-sdk</artifactId>
-        <version>${project.version}</version>
+        <version>${peanut.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.olivia</groupId>
+        <artifactId>peanut-base</artifactId>
+        <version>${peanut.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>com.olivia</groupId>
-        <artifactId>peanut-algorithm</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <!--      <dependency>-->
-      <!--        <groupId>com.fasterxml.jackson.core</groupId>-->
-      <!--        <artifactId>jackson-databind</artifactId>-->
-      <!--        <version>2.20.1</version>-->
-      <!--        <scope>compile</scope>-->
-      <!--      </dependency>-->
-      <!--      <dependency>-->
-      <!--        <groupId>com.fasterxml.jackson.datatype</groupId>-->
-      <!--        <artifactId>jackson-datatype-jdk8</artifactId>-->
-      <!--        <version>2.21.0</version>-->
-      <!--        <scope>compile</scope>-->
-      <!--      </dependency>-->
-      <!--      <dependency>-->
-      <!--        <groupId>com.fasterxml.jackson.datatype</groupId>-->
-      <!--        <artifactId>jackson-datatype-jsr310</artifactId>-->
-      <!--        <version>2.18.1</version>-->
-      <!--        <scope>compile</scope>-->
-      <!--      </dependency>-->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
         <version>1.15.0</version>
       </dependency>
-      <!--      <dependency>-->
-      <!--        <groupId>org.junit.jupiter</groupId>-->
-      <!--        <artifactId>junit-jupiter</artifactId>-->
-      <!--        <version>6.1.0</version>-->
-      <!--        <scope>test</scope>-->
-      <!--      </dependency>-->
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
@@ -254,19 +205,18 @@
         <version>${apache.poi.versison}</version>
       </dependency>
 
-
+      <!-- 替换为最新稳定 4.1.x Netty 版本 -->
       <!--      <dependency>-->
-      <!--        <artifactId>dingtalk</artifactId>-->
-      <!--        <groupId>com.aliyun</groupId>-->
-      <!--        <version>2.2.33</version>-->
+      <!--        <groupId>io.netty</groupId>-->
+      <!--        <artifactId>netty-all</artifactId>-->
+      <!--        <version>${netty.version}</version>-->
       <!--      </dependency>-->
+      <dependency>
+        <artifactId>netty-common</artifactId>
+        <groupId>io.netty</groupId>
+        <version>${netty.version}</version>
 
-      <!--      <dependency>-->
-      <!--        <artifactId>app-stream-client</artifactId>-->
-      <!--        <groupId>com.dingtalk.open</groupId>-->
-      <!--        <version>1.3.7</version>-->
-      <!--      </dependency>-->
-
+      </dependency>
       <dependency>
         <artifactId>ortools-java</artifactId>
         <exclusions>
@@ -301,14 +251,20 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  <parent>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <groupId>org.springframework.boot</groupId>
-    <version>3.5.15</version>
-  </parent>
+  <packaging>pom</packaging>
+  <modules>
+    <module>peanut-sdk</module>
+    <module>peanut-gateway</module>
+    <module>peanut-base</module>
+  </modules>
+
   <properties>
-    <java.version>26</java.version>
-    <javac.path>/Users/wangbao/Library/Java/JavaVirtualMachines/openjdk-26.0.1/Contents/Home/bin/javac</javac.path>
+    <!--    <java.version>26</java.version>-->
+    <!--    <javac.path>/Users/wangbao/Library/Java/JavaVirtualMachines/openjdk-26.0.1/Contents/Home/bin/javac</javac.path>-->
+
+    <java.version>25</java.version>
+    <javac.path>/Users/wangbao/Library/Java/openjdk-25.0.1/Contents/Home/bin/javac</javac.path>
+
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -327,7 +283,16 @@
     <ortools.version>9.15.6755</ortools.version>
     <protobuf.version>4.35.1</protobuf.version>
     <uber.h3.version>4.4.0</uber.h3.version>
+    <netty.version>4.2.15.Final</netty.version>
+    <peanut.version>4.0.0-202607-SNAPSHOT</peanut.version>
+
 
   </properties>
+  <parent>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <version>3.5.15</version>
+  </parent>
+  <version>4.0.0-202607-SNAPSHOT</version>
 
 </project>
